--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,57 @@
 .header {
+    color: #f9faf8;
+    background-color: #1f2937;
     border-style: dashed;
+    border-color: black;
     display: flex;
     justify-content: flex-end;
     text-align: start;
+    padding-right: 50px;
 
+}
+
+a {
+    font-size: 18px;
+    color: #f9faf8;
+    text-decoration: none;
+}
+
+.header_one {
+    padding-right: 350px;
 }
 
 .header_two {
+    border-color: black;
     justify-content: flex-start;
     border-style: dashed;
+    justify-content: space-between;
 }
 
 .body {
+    border-style: dashed;
     display: flex;
-    height: 500px;
-    background-color: aqua;
-    flex-direction: column;
+    background-color: #1f2937;
+    flex: auto;
+}
+
+.item {
+    border-style: dashed;
+    width: 50%;
+    flex: auto; 
+}
+
+.item h1 {
+    color: #f9faf8;
+    font-weight: 800;
+    font-size: 48px;
+    width: 50%;
+}
+
+.body img {
+    width: 300px;
+    height: 150px;
+    border-style: dashed;
+    background-color: #1f2937;
+    flex: auto;
+    justify-content: flex-end;
 }
