--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-.header {
+/* .header {
     color: #f9faf8;
     background-color: #1f2937;
     border-style: dashed;
@@ -8,50 +8,84 @@
     text-align: start;
     padding-right: 50px;
 
-}
-
+} */
+/* 
 a {
     font-size: 18px;
     color: #f9faf8;
     text-decoration: none;
-}
+} */
 
-.header_one {
+/* .header_one {
     padding-right: 350px;
-}
+} */
 
-.header_two {
+/* .header_two {
     border-color: black;
     justify-content: flex-start;
     border-style: dashed;
     justify-content: space-between;
+} */
+
+/* ^^^^^^^FIRST ATTEMPT AT CSS FLEXBOX SETTINGS FOR HEADING^^^^^^^*/
+
+
+/*VVVVVVV SECOND ATTEMPT VVVVVVV*/
+
+a {
+    color: #f9faf8;
+}
+
+.header {
+    color: #f9faf8;
+    border-style: dashed;
+    border-color: aqua;
+    background-color: #1f2937;
+    display: flex;
+    justify-content: space-between;
+}
+
+.header_one {
+    border-style: dashed;
+    border-color: red;
+    justify-content: left;
+}
+
+.header_two {
+    border-style: dashed;
+    border-color: yellow;
+    justify-content: right;
 }
 
 .body {
     border-style: dashed;
     display: flex;
     background-color: #1f2937;
-    flex: auto;
 }
 
 .item {
     border-style: dashed;
     width: 50%;
-    flex: auto; 
+    /* flex: 1; */
 }
 
 .item h1 {
+    flex: auto;
     color: #f9faf8;
     font-weight: 800;
     font-size: 48px;
     width: 50%;
 }
 
+#Sign_Up {
+    justify-content:left;
+
+}
+
 .body img {
-    width: 300px;
-    height: 150px;
+    width: auto;
+    height: 350px;
     border-style: dashed;
     background-color: #1f2937;
-    flex: auto;
-    justify-content: flex-end;
+    flex:2;
 }
