--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,6 @@ a {
 }
 
 .header {
-    height: 75px;
     width: auto;
     color: #f9faf8;
     /* border-style: dashed;
@@ -71,7 +70,7 @@ a {
     border-color: aqua; */
     display: flex;
     background-color: #1f2937;
-    /* margin-top: 20px; */
+    margin-top: 20px;
     padding-left: 48px;
     padding-right: 48px;
 }
