--- a/css/styles_two.css
+++ b/css/styles_two.css
@@ -15,6 +15,7 @@
     background-color: white;
     display: flex;
     justify-content:center;
+    justify-content: space-around;
     flex-direction: row;
     padding: 15px;
     margin: 5px;
@@ -53,7 +54,7 @@
 }
 
 .img_four {
-    justify-content: space-between;
+    justify-content: space-around;
     width: 100px;
     height: 100px;
 
