--- a/css/styles_two.css
+++ b/css/styles_two.css
@@ -34,6 +34,8 @@
     height: auto;
     background-color: #E5E7EB;
     color: #1f2937;
+    margin-top: 50px;
+    margin-bottom: 30px;
 }
 
 .b3_para {
