--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,16 @@ a {
 
 /*VVVVVVV SECOND ATTEMPT VVVVVVV*/
 
-button {
+* {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+body {
+    margin: 0;
+}
+
+
+.button_one {
     border-style: none;
     height: 27px;
     width: 100px;
@@ -103,11 +112,6 @@ a {
 .item p {
     color: #f9faf8;
     font-weight: lighter;
-}
-
-#Sign_Up {
-    justify-content:left;
-
 }
 
 .body img {
