Added Final touches Website ready for javascript

--- a/css/styles_two.css
+++ b/css/styles_two.css
@@ -1,10 +1,10 @@
 .b2_head {
-    padding-top: 10px;
     /* border-style: dashed;
     border-color: red; */
     height: auto;
-    width: 100%;
+    width: auto;
     text-align: center;
+    margin-bottom: -25px;
 }
 
 .body_two {
@@ -60,8 +60,8 @@
     padding-bottom: 50px;
 }
 
-.img_four {
+/* .img_four {
     justify-content: space-around;
     width: 175px;
     height: 175px;
-}
+} */
