--- a/css/styles_three.css
+++ b/css/styles_three.css
@@ -67,3 +67,20 @@
     align-items: center;
 }
 
+.square_outline {
+    width: auto;
+    display: flex;
+    justify-content: space-evenly;
+    padding: 50px;
+}
+
+.square_4 {
+    align-content: center;
+    /* justify-content: space-between; */
+    border-style: solid;
+    border-color: #3882F6;
+    border-radius: 12px;
+    background-color: white;
+    width: 100px;
+    height: 100px;
+}
