--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@ a {
 
 body {
     margin: 0;
+    padding: 0;
 }
 
 
@@ -89,9 +90,8 @@ a {
     border-color: aqua; */
     display: flex;
     background-color: #1f2937;
-    /* margin-top: 20px; */
-    padding-left: 48px;
-    padding-right: 48px;
+    /* margin: 50px; */
+    padding: 50px;
 }
 
 .item {
